<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/red"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:text="Choose admin function"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/checklockerusage_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="70sp"
            android:text="@string/CheckLockerUsage"
            android:textAllCaps="false"
            android:textSize="25sp"
            tools:text="Check Locker Usage" />

        <Button
            android:id="@+id/lockermaintenance_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="40sp"
            android:text="@string/LockerMaintenance"
            android:textAllCaps="false"
            android:textSize="25sp"
            tools:text="Locker Maintenance" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.87"
            android:background="@mipmap/logo0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <Button
                    android:id="@+id/logoff_btn"
                    android:layout_width="145dp"
                    android:layout_height="71dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="100sp"
                    android:layout_weight="0.03"
                    android:background="@drawable/roundbutton"
                    android:text="@string/LogOff"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimaryInverseDisableOnly"
                    android:textSize="23sp"
                    android:textStyle="bold|italic"
                    tools:text="Log Off" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>