<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/red"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="341dp"
            android:layout_height="61dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20sp"
            android:gravity="center"
            android:text="Dear Guest:"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="38sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logoff_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="150sp"
            android:layout_weight="0.13"
            android:shadowColor="@color/brown"
            android:background="@drawable/roundbutton"
            android:text="@string/LogOff"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold|italic"
            tools:text="Log Off" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/LockerNumTX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:text="LockerNum:"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterlockernum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="25sp"
            android:layout_weight="0.52"
            android:textColor="@color/lightgray"
            android:contentDescription="@string/LockerNum"
            android:ems="10"
            android:inputType="textPersonName|number"
            android:singleLine="true"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45sp"
            android:gravity="center"
            android:text="@string/LockerCheckIn"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="CheckIn"
            android:id="@+id/checkin_btn" />

        <Button
            android:id="@+id/checkout_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:text="@string/CheckOut"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="CheckOut" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80sp"
        android:text="Problem in check out process? Please contact out staff"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="normal|italic" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:background="@mipmap/logo0" />

</LinearLayout>