<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/red"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="-7dp"
        android:layout_marginTop="-7dp"
        android:layout_weight="1.09"
        android:background="@mipmap/red"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/RepairTX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:text="locker broken please call 7744205478 for repair"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LockerNumTX"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.44"
                android:gravity="left"
                android:text="LockerNum:"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enterlockernum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:contentDescription="@string/LockerNum"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <Button
            android:id="@+id/repair_btn"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray"
            android:text="@string/Repair"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:text="Repair" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:text="Register" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.87"
            android:background="@mipmap/logo0" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <Button
                    android:id="@+id/logoff_btn"
                    android:layout_width="145dp"
                    android:layout_height="71dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="100sp"
                    android:background="@drawable/roundbutton"
                    android:text="@string/LogOff"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimaryInverseDisableOnly"
                    android:textSize="23sp"
                    android:textStyle="bold|italic"
                    tools:text="Log Off"
                    android:layout_weight="0.03" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>